# Speech-Asr-Audio-Engine

./: README.md  requirements.txt
configs/: default.yaml
cpp/audio_processing/: CMakeLists.txt  audio_features.cpp  audio_features.h  main.cpp
experiments/: run_experiment.py
experiments/outputs/: baseline_v1_1774005579.json
src/: __init__.py
src/asr/: __init__.py  evaluator.py  wav2vec2_asr.py  whisper_asr.py
src/classification/: __init__.py  classifier.py  dataset.py
src/diarization/: __init__.py  aligner.py  segmenter.py
src/features/: __init__.py  chroma.py  feature_pipeline.py  mel_spectrogram.py  mfcc.py
src/pipeline/: __init__.py  hybrid_pipeline.py  runner.py
src/utils/: __init__.py  audio_io.py  experiment_tracker.py  logger.py
